@@ -395,8 +395,8 @@ Settings.movie.renamer.spacesubstitution=Replace spaces with
 Settings.movie.renamer.$T=Title
 Settings.movie.renamer.$O=Original title
 Settings.movie.renamer.$1=first letter of the title
-Settings.movie.renamer.$E=Sort title
-Settings.movie.renamer.$2=first letter of sort title
+Settings.movie.renamer.$E=Title sorting (e.g. Matrix, The)
+Settings.movie.renamer.$2=first letter of Title sorting
 Settings.movie.renamer.$Y=Year
 Settings.movie.renamer.$M=Movieset title (sort title)
 Settings.movie.renamer.$N=Movieset title
